--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   },
   "homepage": "https://github.com/craigbilner/lal-components#readme",
   "devDependencies": {
-    "lerna": "^2.0.0-rc.5"
+    "lerna": "2.0.0-rc.5"
   }
 }
