--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A collection of presentational components for locate a location",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "storybook:build": "build-storybook -c .storybook -o .out"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,13 @@
   },
   "homepage": "https://github.com/craigbilner/lal-components#readme",
   "devDependencies": {
-    "lerna": "2.0.0-rc.5"
+    "@storybook/addon-actions": "^3.0.0",
+    "@storybook/react": "^3.0.0",
+    "lerna": "2.0.0-rc.5",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
+  },
+  "dependencies": {
+    "react-native-web": "^0.0.97"
   }
 }
