--- a/package.json
+++ b/package.json
@@ -4,9 +4,21 @@
   "description": "A collection of presentational components for locate a location",
   "main": "index.js",
   "scripts": {
+    "native": "node node_modules/react-native/local-cli/cli.js start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 9001 -c .storybook",
+    "prestorybook-native": "node ./node_modules/.bin/rnstl",
+    "storybook-native": "storybook -c .storybook.native start -p 7007",
     "storybook:build": "build-storybook -c .storybook -o .out"
+  },
+  "config": {
+    "react-native-storybook-loader": {
+      "searchDir": [
+        "./packages"
+      ],
+      "pattern": "**/*.stories.js",
+      "outputFile": "./.storybook.native/story-loader.js"
+    }
   },
   "repository": {
     "type": "git",
@@ -24,13 +36,17 @@
   },
   "homepage": "https://github.com/craigbilner/lal-components#readme",
   "devDependencies": {
-    "@storybook/addon-actions": "^3.0.0",
-    "@storybook/react": "^3.0.0",
+    "@storybook/addon-actions": "3.0.0",
+    "@storybook/react": "3.0.0",
+    "@storybook/react-native": "3.0.0",
     "lerna": "2.0.0-rc.5",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react": "16.0.0-alpha.6",
+    "react-dom": "15.5.4",
+    "react-native": "0.44.1",
+    "react-native-storybook-loader": "1.3.1",
+    "url": "^0.11.0"
   },
   "dependencies": {
-    "react-native-web": "^0.0.97"
+    "react-native-web": "0.0.97"
   }
 }
