--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,5 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 
-.storybook-native/storyLoader.js
+.storybook.native/story-loader.js
 .out
