--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "storybook": "start-storybook -p 9001 -c .storybook",
     "prestorybook-native": "node ./node_modules/.bin/rnstl",
     "storybook-native": "storybook -c .storybook.native start -p 7007",
-    "storybook:build": "build-storybook -c .storybook -o .out"
+    "storybook:build": "build-storybook -c .storybook -o .out",
+    "prettier:diff": "prettier --list-different 'packages/**/*.js'"
   },
   "config": {
     "react-native-storybook-loader": {
@@ -40,6 +41,7 @@
     "@storybook/react": "3.0.0",
     "@storybook/react-native": "3.0.0",
     "lerna": "2.0.0-rc.5",
+    "prettier": "^1.4.2",
     "react": "16.0.0-alpha.6",
     "react-dom": "15.5.4",
     "react-native": "0.44.1",
