--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prestorybook-native": "node ./node_modules/.bin/rnstl",
     "storybook-native": "storybook -c .storybook.native start -p 7007",
     "storybook:build": "build-storybook -c .storybook -o .out",
-    "prettier:diff": "prettier --list-different 'packages/**/*.js'"
+    "prettier:diff": "prettier --list-different 'packages/**/*.js'",
+    "packages:publish": "lerna publish --conventional-commits"
   },
   "config": {
     "react-native-storybook-loader": {
