--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "7.0.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.5",
     "babel-preset-react-native": "1.9.2",
+    "jest": "^20.0.4",
     "webpack": "2.6.1"
   },
   "dependencies": {
