--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -4,6 +4,7 @@
   "description": "A card component",
   "main": "card.js",
   "scripts": {
+    "flow": "node_modules/flow-bin/cli.js",
     "test:dev": "jest --bail --verbose --watch",
     "test": "jest --bail --ci --coverage"
   },
@@ -28,10 +29,13 @@
   },
   "homepage": "https://github.com/craigbilner/lal-components#readme",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "6.24.1",
     "babel-loader": "7.0.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.5",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react-native": "1.9.2",
+    "flow-bin": "^0.42.0",
     "jest": "^20.0.4",
     "react-native": "^0.44.2",
     "react-test-renderer": "^15.5.4",
